# CompassDock

./: .gitignore  LICENSE  README.md  compass.py  environment.yml  finetune.py  inference_wrap.py  main_inference.py  main_multi_shot.py  main_single_shot.py  pyproject.toml  run_summary_wandb.py  training.py
AA_Score_Tool/: AA_Score.ipynb  AA_Score.py
AA_Score_Tool/interaction_components/: plinteraction.py
AA_Score_Tool/scripts/: get_pocket_by_biopandas.py
AA_Score_Tool/utils/: electrostatic.py  vdw.py
DiffDock/: .gitignore  README.md  default_inference_args.yaml  evaluate.py
DiffDock/confidence/: dataset.py
DiffDock/datasets/: esm_embedding_preparation.py  loader.py  parse_chi.py  pdb_dock.py  process_mols.py
DiffDock/models/: old_cg_model.py
DiffDock/utils/: inference_utils.py  parsing.py  torsion.py  utils.py
compassdock/: __init__.py  compass.py  compassdock.py  config.py  esm_processing.py  finetune.py  inference_wrap.py  training.py
compassdock/AA_Score_Tool/: AA_Score.py
compassdock/DiffDock/: default_inference_args.yaml  evaluate.py  inference_new.py  train.py
example/: smiles.txt
experiments/: JobErrors.txt  error_job_list.py  html_converter.py  model_parameters.yml  rerun_error_jobs.sh
experiments/AlphaFold/: array_launcher.sh  create_missing_run_folder.py  create_run_lst.sh  factory.sh  factory_mc.sh  missing_runs.py  missing_runs.txt  qsub_run.sh  summary_new.csv
experiments/BindingMOAD/: array_launcher.sh  create_run_lst.sh  factory_haicore.sh  factory_mc.sh  missing_runs.py  missing_runs.txt  qsub_run.sh  sbatch_run.sh  scancel.sh
experiments/DOCKGEN/: array_launcher.sh  factory.sh  factory_mc.sh  missing_runs.py  missing_runs.txt  qsub_run.sh
experiments/ECBL/: af_files.txt  af_files_separate.txt  create_run_folder.py  eos_smiles.txt  factory_mc.sh  find_af_structures.py  get_smiles.py  qsub_run.sh  test.py
experiments/HURI/: array_launcher.sh  array_launcher2.sh  array_launcher3.sh  create_missing_run_folder.py  create_missing_run_folder.sh  create_run_lst.sh  delete_jobs.sh  factory.sh  factory_mc.sh  missing_runs.py  missing_runs.txt  sbatch_run.sh
experiments/PDBBind/: array_launcher.sh  (+8 more)
(+50 files in other folders)
