[project]
name = "compassdock"
version = "0.1.0"
description = "A comprehensive accurate assesment approach for deep learning based molecular docking"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { file = "LICENSE" }

authors = [
  { name = "Ahmet Sarigun", email = "Ahmet.Sariguen@mdc-berlin.de" }
]

maintainers = [
  { name = "Ahmet Sarigun", email = "Ahmet.Sariguen@mdc-berlin.de" }
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Programming Language :: Python :: 3.11",
]

dependencies = [
  "torch",
  "torchvision",
  "PyYAML",
  "scipy",
  "networkx",
  "biopython",
  "rdkit-pypi",
  "e3nn",
  "spyrmsd",
  "pandas",
  "biopandas",
  "prody==2.4.1",
  "torch_geometric",
  "rdkit==2023.9.6",
  "py3dmol==2.1.0",
  "seaborn",
  "prolif==2.0.3",
  "pybel==0.15.5",
  "numpy==1.26.4"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["compassdock*"]
